style.css
body {
    display: flex;
    flex-direction: column;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 0;
    padding: 0;
    height: 100vh;
}

img {
    width: 150px;
    height: auto;
}

.header {
    display: flex;
    padding: 30px;
    background-color: #1f2937;
    flex-direction: column;
    color: white;
    margin-bottom: 100px;
}

ul {
    display: flex;
    list-style: none;
    gap: 20px;
}

a {
    text-decoration: none;
    color: #e5e7eb;

}

.navbar {
    display: flex;
    
    justify-content: space-between;
    align-items: center;
    margin-bottom: 100px;
    
}

.header-logo {
    font-weight: 1000;
    font-size: x-large;
}

.left {
    
    gap: 10px;
}

.main-text {
    font-size: 48px;
    font-weight: bolder;
    color: #f9faf8;
    margin-bottom: 10px;

}

.sub-text {
    font-size: 18px;
    color: #e5e7eb;
    margin-bottom: 30px;
}

button {
    background-color: #3882f6;
    padding: 10px;
    padding-left: 10px;
    color: white;
    border-radius: 10px;
    border: none;
    width: 100px;
    
}



.container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 100px;
}

img {
    width: 190px;
    display: flex;
    flex-grow: 1;
    margin-bottom: 10px;
}

.info-container {
    display: flex;
    flex-direction: column;
    margin-bottom: 100px;
}

.information {
    display: flex;
    font-size: 36px;
    font-weight: bolder;
    color: #1f2937;
    justify-content: center;
    align-items: center;
    margin-bottom: 50px;
    
}

.imgs {
    display: flex;
    justify-content: space-around;
    flex: auto;
    gap: 10px;
    margin-bottom: 50px;
}

.info {
    max-width: 200px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 50px;
    
}

.text {
    text-align: center;
    
}

.quote-section {
    display: flex;
    background-color: #e5e7eb;
    flex-direction: column;
    padding: 100px;
}

.quote {
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
    color: #1f2937;
    margin-bottom: 10px;
}

.customer {
    display: flex;
    justify-content: flex-end;
    font-weight: bold;
}

.call-container {
    display: flex;
    padding: 100px;
    justify-content: center;
    align-items: center;
    

}

.call-to-action {
    display: flex;
    justify-content: space-between;
    background-color: #3882f6;
    padding: 50px;
    color: white;
    margin: 0;
    border-radius: 10px;
    gap: 100px;
    flex: 1;    
}

.call-left {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.call-text {
    font-weight: bold;
}

.sign-up-text {
    font-size: small;
}

.call-button {
    font-weight: bold;
    border-style: groove;
    
}

footer {
    padding: 30px;
    background-color: #1f2937;
    display: flex;
    color: white;
    justify-content: center;
}

